@@ -4,12 +4,13 @@ Pending changes in the mainline
 * C-Echo testing can be triggered from Orthanc Explorer (in the query/retrieve page)
 * Removal of the dependency upon Google Log, Orthanc now uses its internal logger 
   (use -DENABLE_GOOGLE_LOG=ON to re-enable Google Log)
+* Upgrade to JsonCpp 0.10.5 for static and Windows builds
 
 
 Version 0.9.2 (2015/08/02)
 ==========================
 
-* Update to Boost 1.58.0 for static and Windows builds
+* Upgrade to Boost 1.58.0 for static and Windows builds
 * Source code repository moved from Google Code to BitBucket
 * Inject version information into Windows binaries
 * Fix access to binary data in HTTP/REST requests by Lua scripts
